2012-11-08 17:16  geoff

    * Small fix in CMakeLists.txt to allow -DCMAKE_BUILD_TYPE=DEBUG 
      to function in unix. Seems CMake uses the set(CMAKE_DEBUG_POSTFIX d)
      to append a 'd' to the libraries when this is on, but does NOT 
      automatically then use that library name in the link, like it 
      does in WIN32, so removed CMAKE_DEBUG_POSTFIX for other than WIN32.
      The CMakeLists.txt also has an option -DENABLED_DEBUG_SYMBOLS:BOOL=TRUE
      to add -g to the compile flags, to include DEBUG sysmbols in the 
      Unix binaries.
    * Bumped AGE to 26

2012-10-16 00:00  geoff

	* This file has NOT been kept up to date. Many months ago the 
	  the build system was changed over to CMake - See CMakeLists.txt
	- As part of this all the automake files have been removed, and 
	  the INSTALL file is now way out of date.
	- For quite some time now, a MSVC Windows version can be built
	- pthreads has become a permanent prerequisite requirement
	- Thanks to Hazuki Amamiya there have been LOTS of improvements 
	  in the 'tracker' server, in contrib/fgtracker
	- In the change over to CMake the 'make install' may be broken.
	  CMake uses a 'default' install to /usr/local/bin instead of the 
	  intended /usr/sbin, and the config file, fgms.conf has to be
	  manually copied to /usr/etc/fgms.conf, but there is a command
	  line override to place it anywhere.
	- In general there have been a lot of bug fixes, too numerous to 
	  mention. Read the gitorious commits logs for details.
   
2010-06-21 08:57  oliver

	* Makefile.am, configure.ac, src/Makefile.am,
	  src/server/fg_server.cxx, src/server/fg_server.hxx,
	  src/server/fgms_example.conf, src/server/main.cxx:
	- fixed "kill -HUP" bug

2010-02-18 11:49  oliver

	* configure.ac, src/server/fg_tracker.cxx, src/server/main.cxx:
	- The configfile location now considers --sysconfdir of configure

2010-02-15 09:04  oliver

	* configure.ac, src/server/daemon.cxx, src/server/typcnvt.hxx,